CSS fix for headings that get wrapped over more than one line.

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -51,6 +51,7 @@ h3 { font-size: 1.7em; }
 h4 { font-size: 1.5em; }
 h5 { font-size: 1.3em; }
 h6 { font-size: 1.1em; }
+h2,h3,h4,h5,h6 { line-height: 1.2em; }
 
 small {
 	font-size: 0.9em;
